fix blurr effect

--- a/src/index.css
+++ b/src/index.css
@@ -48,8 +48,6 @@
 }
 
 @media (prefers-color-scheme: dark) {
-
-@media (prefers-color-scheme: dark) {
   :root {
     --text: #9ca3af;
     --text-h: #f3f4f6;
